<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.fpij.jitakyoei</groupId>
    <artifactId>sistema-de-judocas</artifactId>
    <version>1.0-SNAPSHOT</version>

    <name>sistema-de-judocas</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <exec.mainClass>org.fpij.jitakyoei.util.Main</exec.mainClass>
    </properties>

    <dependencies>
        <dependency>
            <groupId>net.java.dev.genesis.annotation</groupId>
            <artifactId>annotation</artifactId>
            <version>3.2</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/genesis/dist/genesis-annotation-jdk5-3.2.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>net.java.dev.genesis</groupId>
            <artifactId>aspect</artifactId>
            <version>3.2</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/genesis/dist/genesis-aspect-3.2.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>net.java.dev.genesis.ui</groupId>
            <artifactId>client</artifactId>
            <version>3.2</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/genesis/dist/genesis-client-3.2.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>net.java.dev.genesis.ui</groupId>
            <artifactId>client-swing</artifactId>
            <version>3.2</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/genesis/dist/genesis-client-swing-3.2.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>net.java.dev.genesis.ui</groupId>
            <artifactId>client-swt</artifactId>
            <version>3.2</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/genesis/dist/genesis-client-swt-3.2.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>net.java.dev.genesis.ui</groupId>
            <artifactId>client-thinlet</artifactId>
            <version>3.2</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/genesis/dist/genesis-client-thinlet-3.2.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>net.java.dev.genesis</groupId>
            <artifactId>container</artifactId>
            <version>3.2</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/genesis/dist/genesis-container-3.2.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>net.java.dev.genesis</groupId>
            <artifactId>server</artifactId>
            <version>3.2</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/genesis/dist/genesis-server-3.2.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>net.java.dev.genesis</groupId>
            <artifactId>shared</artifactId>
            <version>3.2</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/genesis/dist/genesis-shared-3.2.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>net.java.dev.genesis</groupId>
            <artifactId>shared-annotated</artifactId>
            <version>3.2</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/genesis/dist/genesis-shared-annotated-3.2.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>forms</groupId>
            <artifactId>forms</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/forms.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>db4o</groupId>
            <artifactId>db4o</artifactId>
            <version>7.4.106.13438-java5</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/db4o-7.4.106.13438-java5.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>jcalendar</groupId>
            <artifactId>jcalendar</artifactId>
            <version>1.3.3</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/jcalendar-1.3.3.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>TableLayout</groupId>
            <artifactId>TableLayout</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/TableLayout.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>jmock</groupId>
            <artifactId>jmock-cglib</artifactId>
            <version>1.0.1</version>
            <scope>test</scope>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-scala-specs2_2.13</artifactId>
            <version>1.17.37</version>
            <scope>test</scope>
            <type>jar</type>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0</version> 
                <configuration>
                    <includes>
                        <include>**/*Test.java</include>
                    </includes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
                <configuration>
                    <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.7</version>
                <executions>
                    <execution>
                        <id>default</id>
                        <goals>
                            <goal>prepare-agent</goal> 
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
